# api_python_crud_uv_project

./: Dockerfile  README.md  alembic.ini  docker-compose-from-dockerhub.yaml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  main.py  models.py  pyproject.toml  test_api.py
alembic/: env.py
alembic/versions/: d7969d81706a_init.py
k8s/: app_deploy.yaml  database.yaml
