[project]
name = "api-python-uv-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi>=0.116.1",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy[asyncio]>=2.0.43",
    "uvicorn>=0.35.0",
]
